<resources>
    <string name="app_name">WeatherApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="before_give_data">---</string>
    <string name="temperature_daily">%s °C</string>
    <string name="temperature_day">%s °C</string>
    <string name="temperature_feel">Feels like: %s °C</string>
    <string name="wind">Speed of wind:%s km/h</string>
    <string name="massages">Сповіщення</string>
    <string name="settings">Налаштування</string>
    <string name="leave_report">Залиш відгук</string>
    <string name="report">Оцініть цей відгук</string>
    <string name="share">Поділіться</string>
    <string name="menu_today">Сьогодні</string>
    <string name="menu_forecast">Прогноз</string>
    <string name="menu_precipitation">Опади</string>
    <string name="menu_radar">Радар</string>

</resources>