<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/notification"
            android:title="@string/massages" />
        <item
            android:id="@+id/nav_gallery"
            android:iconTint="@color/white"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_slideshow"
            android:iconTint="@color/white"
            android:icon="@drawable/report"
            android:title="@string/leave_report" />
        <item
            android:id="@+id/nav_report"
            android:iconTint="@color/white"
            android:icon="@drawable/reting"
            android:title="@string/report" />
        <item
            android:id="@+id/nav_share"
            android:iconTint="@color/white"
            android:icon="@drawable/share"
            android:title="@string/share" />
    </group>
</menu>